--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5940,9 +5940,13 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 -------------------------------------------------------------------
 6.00.14:
 
--BUG FIX: (TBD)
+-BUG FIX: Fixed PHP session cookie to be samesite=strict (all editions) and secure-only (if server edition)
 
--Users can change the default time period (that loads first) for price charts
+-BUG FIX: Fixed javascript set_cookie() function to use secure cookies (if server edition)
+
+-Users can change the default time period for price charts (which time period loads initially)
+
+-Code cleanup
 
 -v6.00.13 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.12 OR LOWER.
 
